--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
+    "@astrojs/tailwind": "^5.1.1",
     "@types/nodemailer": "^6.4.16",
     "astro": "^4.15.4",
     "nodemailer": "^6.9.15",
