--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/tailwind": "^5.1.1",
+    "@astrojs/vercel": "^7.8.1",
     "@types/nodemailer": "^6.4.16",
+    "@vercel/analytics": "^1.3.1",
     "astro": "^4.15.11",
     "nodemailer": "^6.9.15",
     "typescript": "^5.6.2"
